# Awesome-Claude

./: .env.example  .gitignore  CONTRIBUTING.md  Gemfile  README.md  _config.yml  about.md  index.md  pyproject.toml
.claude/: ralph-loop.local.md
_data/: categories.yml  site_meta.yml
_includes/: github-metrics.html  rating-badge.html  skill-card.html
_layouts/: category.html  default.html  home.html  skill.html
_skills/: ab-test-analysis.md  about.md  accessibility-tester.md  acquisition-channel-advisor.md  ad-copy-writer.md  ad-security-reviewer.md  adapt-architecture.md  adaptic.md  adaptyv.md  add-puzzle-type.md  add-rcpp-integration.md  aeon.md  agent-installer.md  agent-orchestration-advisor.md  agent-organizer.md  agentic-actions-auditor-agentic-actions-auditor.md  agenttrace-session-audit.md  agnix.md  ai-analyzer.md  ai-engineer.md  ai-shaped-readiness-advisor.md  ai-writing-auditor.md  aikido.md  album-art-director.md  album-conceptualizer.md  album-dashboard.md  album-ideas.md  algorithmic-art.md  alpha-insights.md  alpha-vantage.md  alphafold-database.md  alternatives-pages.md  altitude-horizon-framework.md  analytics-report.md  analyze-codebase-for-mcp.md  analyze-codebase-workflow.md  analyze-diffusion-dynamics.md  analyze-generative-diffusion-model.md  analyze-kernel-bottleneck.md  analyze-magnetic-field.md  (+1774 more)
categories/: core-development.md  index.md  language-specialists.md  quality-security.md
docs/: PLAN.md  decisions.md
scripts/: __init__.py  config.py  discover_skills.py  evaluate_skills.py  fetch_github_metrics.py  fetch_skills.py  (+6 more)
(+1823 files in other folders)
